2004-03-25  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/lily-guile.cc (type_check_assignment): use
	ly_scheme_function iso. scm_primitive_eval where possible.

	* lily/performance.cc (output): limit channels at 15. This fixes
	percussion inadvertently showing up in large scores.

2004-03-24  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/regression/tuplet-gap.ly: new file.

	* lily/tuplet-bracket.cc (make_bracket): take gap interval.
	(print): compute gap length from number size, include italic
	correction.

	* scm/define-grobs.scm (all-grob-descriptions): remove gap from
	tuplet-bracket

	* scm/paper.scm (set-default-paper-size): new function, to be
	called at toplevel.
	(set-paper-size): new function, to be called inside \paper {}
	(set-default-paper-size): new function, to be called at toplevel.

	* lily/paper-def.cc (LY_DEFINE): ly:paper-def?: new function. 

	* lily/beam-performer.cc (process_music): idem.

	* lily/slur-performer.cc (process_music): stop melisma for stop event.
	
	* tex/titledefs.tex: remove scshape for piece.

	* lily/line-spanner.cc (line_stencil): font-encoding = music, not
	font-family

	* lily/time-signature.cc (special_time_signature): font-encoding
	not family.

	* lily/dynamic-engraver.cc (acknowledge_grob): fix typo, attach
	dynamic to head. This fixes p placement in morgenlied.

2004-03-23  Werner Lemberg  <wl@gnu.org>

	* stepmake/stepmake/generic-targets.make (help): Improve text.

2004-03-23  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: 2.1.34 released
	
	* lily/main.cc (main_with_guile): switch debugging.

	* lily/system.cc (get_line): plug leak.

	* lily/paper-book.cc (pages): plug memory leaks: delete page array
	and contents.
	(stencil2line): plug leak.

	* Documentation/user/changing-defaults.itely (Determining a grob
	property):  new node.
	(Layout interfaces): new node.
	(Navigating the program reference): new node.

	* lily/accidental-engraver.cc (acknowledge_grob): add property
	harmonicAccidentals
