@@ -1,5 +1,7 @@
 2004-03-25  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/context-def.cc (filter_engravers): derefence pointer.
+
 	* lily/lily-guile.cc (type_check_assignment): use
 	ly_scheme_function iso. scm_primitive_eval where possible.
 
